--- a/app/src/main/res/layout/breeding_stock_list_item.xml
+++ b/app/src/main/res/layout/breeding_stock_list_item.xml
@@ -123,6 +123,7 @@
                 android:gravity="center"
                 android:text=":"
                 android:textColor="@color/black"
+                android:paddingBottom="6dp"
                 app:autoSizeTextType="uniform"
                 app:layout_constraintBottom_toTopOf="@+id/guideline31"
                 app:layout_constraintEnd_toStartOf="@+id/guideline37"
@@ -167,6 +168,7 @@
                 android:gravity="center"
                 android:text=":"
                 android:textColor="@color/black"
+                android:paddingBottom="6dp"
                 app:autoSizeTextType="uniform"
                 app:layout_constraintBottom_toTopOf="@+id/guideline32"
                 app:layout_constraintEnd_toStartOf="@+id/guideline37"
@@ -212,6 +214,7 @@
                 android:text=":"
                 android:textColor="@color/black"
                 app:autoSizeTextType="uniform"
+                android:paddingBottom="6dp"
                 app:layout_constraintBottom_toTopOf="@+id/guideline33"
                 app:layout_constraintEnd_toStartOf="@+id/guideline37"
                 app:layout_constraintStart_toStartOf="@+id/guideline29"
@@ -255,6 +258,7 @@
                 android:gravity="center"
                 android:text=":"
                 android:textColor="@color/black"
+                android:paddingBottom="6dp"
                 app:autoSizeTextType="uniform"
                 app:layout_constraintBottom_toTopOf="@+id/guideline34"
                 app:layout_constraintEnd_toStartOf="@+id/guideline37"
@@ -300,6 +304,7 @@
                 android:gravity="center"
                 android:text=":"
                 android:textColor="@color/black"
+                android:paddingBottom="6dp"
                 app:autoSizeTextType="uniform"
                 app:layout_constraintBottom_toTopOf="@+id/guideline35"
                 app:layout_constraintEnd_toStartOf="@+id/guideline37"
@@ -380,12 +385,10 @@
                 android:fontFamily="@font/josefin_sans"
                 android:gravity="center"
                 android:maxLines="1"
-                android:padding="8dp"
                 android:paddingStart="@dimen/margin_10"
                 android:paddingEnd="@dimen/margin_10"
                 android:text="LITTERS"
                 android:textColor="@android:color/white"
-                app:autoSizeTextType="uniform"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toStartOf="@+id/guideline37"
                 app:layout_constraintStart_toStartOf="parent"
@@ -415,9 +418,8 @@
                 android:maxLines="1"
                 android:paddingStart="@dimen/margin_10"
                 android:paddingEnd="@dimen/margin_10"
-                android:text="OFFSPRINGS"
+                android:text="OFFSPRING"
                 android:textColor="@android:color/white"
-                app:autoSizeTextType="uniform"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toStartOf="@+id/guideline38"
                 app:layout_constraintStart_toStartOf="@+id/guideline37"
