--- a/app/src/main/res/layout/crop_field_list_card.xml
+++ b/app/src/main/res/layout/crop_field_list_card.xml
@@ -38,7 +38,7 @@
 
                         <TextView
                             android:id="@+id/txt_crop_field_card_name"
-                            android:textSize="16dp"
+                            android:textSize="16sp"
                             android:textColor="@color/colorPrimary"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
@@ -72,14 +72,14 @@
                                 <TextView
                                     android:id="@+id/txt_crop_field_card_area"
                                     android:layout_width="0dp"
-                                    android:layout_weight="0.7"
+                                    android:layout_weight="0.8"
                                     android:layout_height="match_parent"
                                     android:text="15.5 hactares"
                                     android:gravity="center_vertical"
                                     android:layout_marginStart="-5dp"
                                     android:textColor="@color/blackText"
                                     android:textStyle="bold"
-                                    android:textSize="18dp" />
+                                    android:textSize="16sp" />
 
                                 <LinearLayout
                                     android:orientation="horizontal"
@@ -153,7 +153,7 @@
 
                                     android:layout_width="0dp"
                                     android:layout_height="wrap_content"
-                                    android:layout_weight="1.0"
+                                    android:layout_weight=".9"
                                     android:text="Field Type"
                                     android:textColor="@color/colorPrimary"
                                     android:textSize="16sp" />
@@ -191,7 +191,7 @@
                                 <TextView
                                     android:layout_width="0dp"
                                     android:layout_height="wrap_content"
-                                    android:layout_weight="1"
+                                    android:layout_weight=".9"
                                     android:text="Status"
                                     android:textColor="@color/colorPrimary"
                                     android:textSize="16dp" />
@@ -227,7 +227,7 @@
                                 android:layout_height="wrap_content"
                                 android:text="Croppable Area"
                                 android:textColor="@color/colorPrimary"
-                                android:layout_weight="1"
+                                android:layout_weight=".9"
                                 android:textSize="16sp" />
 
 
