--- a/app/src/main/res/layout/crop_notes_list_card.xml
+++ b/app/src/main/res/layout/crop_notes_list_card.xml
@@ -1,38 +1,44 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:background="#F4F4F4"
-    >
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:background="#F4F4F4">
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
         >
 
-        <LinearLayout
-            android:layout_width="match_parent"
+        <androidx.constraintlayout.widget.ConstraintLayout
+            android:id="@+id/layout1"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_weight="0.9"
-            android:orientation="vertical">
-
+            android:orientation="vertical"
+            android:layout_marginStart="5dp"
+            android:layout_marginTop="20dp"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent">
 
             <ImageView
-                android:layout_width="36dp"
-                android:layout_height="36dp"
-                android:scaleType="fitXY"
-                android:src="@drawable/notes_notes" />
-
+                android:id="@+id/img_checked"
+                android:layout_width="25dp"
+                android:layout_height="25dp"
+                android:src="@drawable/ic_checked"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintBottom_toTopOf="@id/line"/>
             <View
-                android:id="@+id/txt_view_crop_spraying_card_line"
-                android:layout_width="1dp"
-                android:layout_height="55dp"
-                android:layout_marginStart="16dp"
-                android:background="#E7EAE7"
-                android:textAlignment="center" />
-
-        </LinearLayout>
+                android:id="@+id/line"
+                android:layout_width="2dp"
+                android:layout_height="80dp"
+                android:background="@color/colorPrimary"
+                android:orientation="vertical"
+                app:layout_constraintTop_toBottomOf="@id/img_checked"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"/>
+        </androidx.constraintlayout.widget.ConstraintLayout>
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -40,23 +46,23 @@
             android:layout_marginTop="20dp"
             android:layout_marginEnd="20dp"
             android:layout_marginBottom="5dp"
+            android:padding="0dp"
             android:layout_weight="0.1"
             android:background="@drawable/input_shapes_crops_card"
             android:orientation="vertical">
 
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginEnd="8dp"
-               android:orientation="vertical"
-                android:padding="15dp">
+
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:orientation="horizontal">
+                    android:orientation="horizontal"
+                    android:layout_marginTop="10dp"
+                    android:layout_marginStart="10dp"
+                    android:layout_marginEnd="@dimen/dimen_10dp">
                     <LinearLayout
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
+                        android:layout_gravity="center_vertical"
                         android:layout_weight="0.2"
                         android:orientation="horizontal"
                         >
@@ -67,7 +73,8 @@
                             android:layout_weight="0.6"
                             android:textSize="14sp"
                             android:text="20-08-2018"
-                            android:textColor="#A6C0A7" />
+                            android:textStyle="bold"
+                            android:textColor="@color/colorPrimary" />
                         <TextView
                             android:id="@+id/txt_view_crop_notes_card_category"
                             android:layout_width="match_parent"
@@ -88,6 +95,7 @@
                         android:layout_height="wrap_content"
                         android:gravity="end"
                         android:layout_weight="0.8"
+                        android:layout_marginBottom="2dp"
                         android:orientation="horizontal">
 
 
@@ -103,14 +111,12 @@
                 <View
                     android:layout_width="match_parent"
                     android:layout_height="1dp"
-                    android:background="#D2D3D2"
-                    />
+                    android:background="@color/darker_gray" />
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:orientation="horizontal"
-                    android:layout_margin="0dp"
-                    android:padding="4dp"
+                    android:padding="10dp"
                     >
 
                     <TextView
@@ -126,7 +132,6 @@
 
 
 
-            </LinearLayout>
 
         </LinearLayout>
     </LinearLayout>
