Created a SharedPreferenceHelper class to manage actions of SharedPreference

--- a/app/src/main/res/layout/fragment_livestock_records.xml
+++ b/app/src/main/res/layout/fragment_livestock_records.xml
@@ -23,8 +23,8 @@
     <ScrollView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_marginTop="?attr/actionBarSize"
-        android:background="@drawable/home_background">
+        android:background="@drawable/home_background"
+        app:layout_behavior="@string/appbar_scrolling_view_behavior">
 
         <RelativeLayout
             android:layout_width="match_parent"
