--- a/app/src/main/res/layout/fragment_wallet_loans_list.xml
+++ b/app/src/main/res/layout/fragment_wallet_loans_list.xml
@@ -1,147 +1,145 @@
-<layout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
     tools:context="com.myfarmnow.myfarmcrop.fragments.wallet.WalletLoansListFragment">
 
-    <androidx.coordinatorlayout.widget.CoordinatorLayout
+    <com.google.android.material.appbar.AppBarLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="wrap_content"
+        android:background="@color/white">
 
-        <com.google.android.material.appbar.AppBarLayout
+        <androidx.appcompat.widget.Toolbar
+            android:id="@+id/toolbar_wallet_loans_list"
+            android:layout_width="match_parent"
+            android:layout_height="50dp"
+            android:theme="@style/HeaderThemeWhite"
+            app:popupTheme="@style/AppTheme.PopupOverlay" />
+
+    </com.google.android.material.appbar.AppBarLayout>
+
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:id="@+id/parent_constraintLayout"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:background="@color/textColorPrimaryLight"
+        android:padding="8dp"
+        app:layout_behavior="@string/appbar_scrolling_view_behavior">
+
+        <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:background="@color/white">
-
-            <androidx.appcompat.widget.Toolbar
-                android:id="@+id/toolbar"
-                android:layout_width="match_parent"
-                android:layout_height="50dp"
-                android:theme="@style/HeaderThemeWhite"
-                app:popupTheme="@style/AppTheme.PopupOverlay" />
-
-        </com.google.android.material.appbar.AppBarLayout>
-
-        <androidx.constraintlayout.widget.ConstraintLayout
-            android:id="@+id/parent_constraintLayout"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:background="@color/textColorPrimaryLight"
-            android:padding="8dp">
+            android:layout_marginTop="45dp"
+            android:orientation="vertical"
+            app:layout_constraintTop_toTopOf="@+id/parent_constraintLayout">
 
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="45dp"
-                android:orientation="vertical"
-                app:layout_constraintTop_toTopOf="@+id/parent_constraintLayout">
+                android:layout_marginTop="4dp"
+                android:layout_marginBottom="10dp"
+                android:gravity="center"
+                android:orientation="vertical">
 
-                <LinearLayout
+                <FrameLayout
+                    android:id="@+id/wallet_apply_loan_layout"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:orientation="vertical"
-                    android:layout_marginTop="4dp"
-                    android:layout_marginBottom="10dp"
-                    android:gravity="center">
+                    android:layout_marginLeft="@dimen/margin_10"
+                    android:layout_marginTop="@dimen/margin_10"
+                    android:layout_marginRight="@dimen/margin_10"
+                    android:layout_marginBottom="5dp"
+                    android:background="@drawable/rounded_corners_button"
+                    android:gravity="right"
+                    android:paddingRight="@dimen/dimen_10dp">
 
-
-                    <FrameLayout
-                        android:id="@+id/wallet_apply_loan_layout"
+                    <Button
+                        android:id="@+id/wallet_apply_loan_btn"
+                        style="@style/Button_DW"
                         android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:gravity="right"
-                        android:layout_marginLeft="@dimen/margin_10"
-                        android:layout_marginRight="@dimen/margin_10"
-                        android:paddingRight="@dimen/dimen_10dp"
-                        android:layout_marginTop="@dimen/margin_10"
-                        android:layout_marginBottom="5dp"
-                        android:background="@drawable/rounded_corners_button">
-                        <Button
-                            android:id="@+id/wallet_apply_loan_btn"
-                            android:layout_width="match_parent"
-                            android:layout_height="40dip"
-                            android:background="@color/transparent"
-                            android:layout_weight="1"
-                            android:textColor="@color/white"
-                            android:textSize="@dimen/button_text_size"
-                            style="@style/Button_DW"
-                            android:text="Apply for Loan"
-                            android:textAllCaps="true"
-                            />
-                        <ImageView
-                            android:layout_width="30dip"
-                            android:layout_height="30dip"
-                            android:layout_alignParentRight="true"
-                            android:layout_centerVertical="true"
-                            android:layout_margin="10dip"
-                            android:layout_gravity="right|center_vertical"
-                            android:src="@drawable/ic_right_arrow">
+                        android:layout_height="40dip"
+                        android:layout_weight="1"
+                        android:background="@color/transparent"
+                        android:text="Apply for Loan"
+                        android:textAllCaps="true"
+                        android:textColor="@color/white"
+                        android:textSize="@dimen/button_text_size" />
 
-                        </ImageView>
+                    <ImageView
+                        android:layout_width="30dip"
+                        android:layout_height="30dip"
+                        android:layout_alignParentRight="true"
+                        android:layout_centerVertical="true"
+                        android:layout_gravity="right|center_vertical"
+                        android:layout_margin="10dip"
+                        android:src="@drawable/ic_right_arrow">
 
-                    </FrameLayout>
+                    </ImageView>
 
-                    <FrameLayout
-                        android:id="@+id/wallet_pay_loan_layout"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:gravity="right"
-                        android:layout_marginLeft="@dimen/margin_10"
-                        android:layout_marginRight="@dimen/margin_10"
-                        android:paddingRight="@dimen/dimen_10dp"
-                        android:layout_marginTop="@dimen/margin_10"
-                        android:layout_marginBottom="5dp"
-                        android:background="@drawable/rounded_corners_button">
-                        <Button
-                            android:id="@+id/wallet_pay_loan_btn"
-                            android:layout_width="match_parent"
-                            android:layout_height="40dip"
-                            android:background="@color/transparent"
-                            android:layout_weight="1"
-                            android:textColor="@color/white"
-                            android:textSize="@dimen/button_text_size"
-                            style="@style/Button_DW"
-                            android:text="Pay Loan"
-                            android:textAllCaps="true"
-                            />
-                        <ImageView
-                            android:layout_width="30dip"
-                            android:layout_height="30dip"
-                            android:layout_alignParentRight="true"
-                            android:layout_centerVertical="true"
-                            android:layout_margin="10dip"
-                            android:layout_gravity="right|center_vertical"
-                            android:src="@drawable/ic_right_arrow">
+                </FrameLayout>
 
-                        </ImageView>
-
-                    </FrameLayout>
-
-                </LinearLayout>
-
-
-                <LinearLayout
-                    android:layout_width="wrap_content"
+                <FrameLayout
+                    android:id="@+id/wallet_pay_loan_layout"
+                    android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:orientation="vertical"
-                    android:padding="5dp">
+                    android:layout_marginLeft="@dimen/margin_10"
+                    android:layout_marginTop="@dimen/margin_10"
+                    android:layout_marginRight="@dimen/margin_10"
+                    android:layout_marginBottom="5dp"
+                    android:background="@drawable/rounded_corners_button"
+                    android:gravity="right"
+                    android:paddingRight="@dimen/dimen_10dp">
 
-                    <androidx.recyclerview.widget.RecyclerView
-                        android:id="@+id/loans_list_recycler_view"
-                        android:layout_width="380dp"
-                        android:layout_height="wrap_content"
-                        app:layout_constraintBottom_toBottomOf="parent"
-                        app:layout_constraintBottom_toTopOf="parent"
-                        app:layout_constraintEnd_toEndOf="parent"
-                        app:layout_constraintHorizontal_bias="0.0"
-                        app:layout_constraintStart_toStartOf="parent"
-                        app:layout_constraintVertical_bias="0.0">
+                    <Button
+                        android:id="@+id/wallet_pay_loan_btn"
+                        style="@style/Button_DW"
+                        android:layout_width="match_parent"
+                        android:layout_height="40dip"
+                        android:layout_weight="1"
+                        android:background="@color/transparent"
+                        android:text="Pay Loan"
+                        android:textAllCaps="true"
+                        android:textColor="@color/white"
+                        android:textSize="@dimen/button_text_size" />
 
-                    </androidx.recyclerview.widget.RecyclerView>
-                </LinearLayout>
+                    <ImageView
+                        android:layout_width="30dip"
+                        android:layout_height="30dip"
+                        android:layout_alignParentRight="true"
+                        android:layout_centerVertical="true"
+                        android:layout_gravity="right|center_vertical"
+                        android:layout_margin="10dip"
+                        android:src="@drawable/ic_right_arrow">
+
+                    </ImageView>
+
+                </FrameLayout>
 
             </LinearLayout>
-        </androidx.constraintlayout.widget.ConstraintLayout>
 
-    </androidx.coordinatorlayout.widget.CoordinatorLayout>
 
-</layout>
+            <LinearLayout
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:orientation="vertical"
+                android:padding="5dp">
+
+                <androidx.recyclerview.widget.RecyclerView
+                    android:id="@+id/loans_list_recycler_view"
+                    android:layout_width="380dp"
+                    android:layout_height="wrap_content"
+                    app:layout_constraintBottom_toBottomOf="parent"
+                    app:layout_constraintBottom_toTopOf="parent"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintHorizontal_bias="0.0"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintVertical_bias="0.0">
+
+                </androidx.recyclerview.widget.RecyclerView>
+            </LinearLayout>
+
+        </LinearLayout>
+    </androidx.constraintlayout.widget.ConstraintLayout>
+
+</androidx.coordinatorlayout.widget.CoordinatorLayout>
