--- a/app/src/main/res/layout/signup.xml
+++ b/app/src/main/res/layout/signup.xml
@@ -234,7 +234,7 @@
                                         android:text="@string/phone_number"
                                         android:textSize="12sp" />
 
-                                    <com.myfarmnow.myfarmcrop.utils.layout.OtpEdittext
+                                    <EditText
                                         android:id="@+id/user_mobile"
                                         android:layout_width="match_parent"
                                         android:layout_height="@dimen/input_field_height"
