--- a/app/src/main/res/layout/wallet_payment_methods.xml
+++ b/app/src/main/res/layout/wallet_payment_methods.xml
@@ -1,154 +1,150 @@
 <?xml version="1.0" encoding="utf-8"?>
 
-<layout xmlns:android="http://schemas.android.com/apk/res/android"
+
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    tools:context="com.myfarmnow.myfarmcrop.DailogFragments.wallet">
+    android:layout_width="match_parent"
+    android:layout_height="320dp"
+    android:layout_gravity="center"
+    android:background="@drawable/solidwhite_shape"
+    android:fitsSystemWindows="true"
+    android:orientation="vertical">
+
+
+    <LinearLayout
+        android:id="@+id/layout_add_money"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="@dimen/dimen_30dp"
+        android:gravity="center">
+
+        <TextView
+            android:id="@+id/digital_wallet_title_label"
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:layout_gravity="center"
+            android:gravity="center"
+            android:text="@string/select"
+            android:theme="@style/HeaderThemeWhite" />
+
+    </LinearLayout>
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="320dp"
-        android:layout_gravity="center"
-        android:background="@drawable/solidwhite_shape"
+        android:layout_height="wrap_content"
         android:orientation="vertical"
-        android:fitsSystemWindows="true">
-
-
-        <LinearLayout
-            android:id="@+id/layout_add_money"
-            android:layout_width="match_parent"
-            android:gravity="center"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="@dimen/dimen_30dp"
-            >
-
-            <TextView
-                android:id="@+id/digital_wallet_title_label"
-                android:layout_width="wrap_content"
-                android:layout_height="match_parent"
-                android:text="@string/select"
-                android:gravity="center"
-                android:layout_gravity="center"
-                android:theme="@style/HeaderThemeWhite" />
-
-        </LinearLayout>
+        android:padding="20dp">
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="vertical"
-            android:padding="20dp">
+            android:padding="10dp">
 
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:orientation="vertical"
-                android:padding="10dp">
+                android:layout_marginLeft="5dp"
+                android:layout_marginRight="5dp"
+                android:orientation="horizontal">
 
                 <LinearLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_marginLeft="5dp"
-                    android:layout_marginRight="5dp"
-                    android:orientation="horizontal">
+                    android:id="@+id/layout_wallet_add_money"
+                    android:layout_width="150dp"
+                    android:layout_height="90dp"
+                    android:layout_marginLeft="0dp"
+                    android:layout_marginRight="20dp"
+                    android:layout_weight="0.3"
+                    android:background="@drawable/solid_shape_border_yellow"
+                    android:onClick="openAddMobileMoney"
+                    android:orientation="vertical">
 
-                    <LinearLayout
-                        android:id="@+id/layout_wallet_add_money"
-                        android:layout_width="150dp"
-                        android:layout_height="90dp"
-                        android:layout_marginLeft="0dp"
-                        android:layout_marginRight="20dp"
-                        android:layout_weight="0.3"
-                        android:background="@drawable/solid_shape_border_yellow"
+                    <ImageButton
+                        android:id="@+id/crop_img_add_money"
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:layout_marginEnd="8dp"
+                        android:layout_marginRight="8dp"
                         android:onClick="openAddMobileMoney"
-                        android:orientation="vertical">
-
-                        <ImageButton
-                            android:id="@+id/crop_img_add_money"
-                            android:layout_width="match_parent"
-                            android:layout_height="match_parent"
-                            android:layout_marginEnd="8dp"
-                            android:layout_marginRight="8dp"
-                            android:onClick="openAddMobileMoney"
-                            android:src="@drawable/mobilemoney" />
-
-                    </LinearLayout>
-
-                    <LinearLayout
-                        android:id="@+id/layout_wallet_transfer"
-                        android:layout_width="150dp"
-                        android:layout_height="90dp"
-                        android:layout_marginRight="0dp"
-                        android:layout_weight="0.3"
-                        android:background="@drawable/solid_shape_border_red"
-                        android:onClick="openAddMobileMoney"
-                        android:orientation="vertical">
-
-                        <ImageButton
-                            android:id="@+id/crop_img_transfer"
-                            android:layout_width="match_parent"
-                            android:layout_height="match_parent"
-                            android:layout_weight="0.3"
-                            android:backgroundTint="#ED1B24"
-                            android:onClick="openAddMobileMoney"
-                            android:src="@drawable/airtelmoney" />
-
-                    </LinearLayout>
+                        android:src="@drawable/mobilemoney" />
 
                 </LinearLayout>
 
                 <LinearLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_marginLeft="5dp"
-                    android:layout_marginTop="20dp"
-                    android:layout_marginRight="5dp"
-                    android:orientation="horizontal">
+                    android:id="@+id/layout_wallet_transfer"
+                    android:layout_width="150dp"
+                    android:layout_height="90dp"
+                    android:layout_marginRight="0dp"
+                    android:layout_weight="0.3"
+                    android:background="@drawable/solid_shape_border_red"
+                    android:onClick="openAddMobileMoney"
+                    android:orientation="vertical">
 
-                    <LinearLayout
-                        android:layout_width="150dp"
-                        android:layout_height="90dp"
-                        android:layout_marginLeft="0dp"
-                        android:layout_marginRight="20dp"
+                    <ImageButton
+                        android:id="@+id/crop_img_transfer"
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
                         android:layout_weight="0.3"
-                        android:background="@drawable/solid_shape_border"
-                        android:onClick="openAddMoneyVisa"
-                        android:orientation="vertical">
-
-                        <ImageButton
-                            android:layout_width="match_parent"
-                            android:layout_height="match_parent"
-                            android:backgroundTint="@color/background_home"
-                            android:gravity="center"
-                            android:onClick="openAddMoneyVisa"
-                            android:src="@drawable/visa" />
-
-                    </LinearLayout>
-
-                    <LinearLayout
-                        android:layout_width="150dp"
-                        android:layout_height="90dp"
-                        android:layout_marginLeft="0dp"
-                        android:layout_marginRight="0dp"
-                        android:layout_weight="0.3"
-                        android:background="@drawable/solid_shape_border"
-                        android:onClick="openAddMoneyVoucher"
-                        android:orientation="vertical">
-
-                        <ImageButton
-                            android:layout_width="match_parent"
-                            android:layout_height="match_parent"
-                            android:backgroundTint="@color/background_home"
-                            android:gravity="center"
-                            android:onClick="openAddMoneyVoucher"
-                            android:src="@drawable/gift" />
-
-                    </LinearLayout>
+                        android:backgroundTint="#ED1B24"
+                        android:onClick="openAddMobileMoney"
+                        android:src="@drawable/airtelmoney" />
 
                 </LinearLayout>
-
 
             </LinearLayout>
-        </LinearLayout>
 
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="5dp"
+                android:layout_marginTop="20dp"
+                android:layout_marginRight="5dp"
+                android:orientation="horizontal">
+
+                <LinearLayout
+                    android:layout_width="150dp"
+                    android:layout_height="90dp"
+                    android:layout_marginLeft="0dp"
+                    android:layout_marginRight="20dp"
+                    android:layout_weight="0.3"
+                    android:background="@drawable/solid_shape_border"
+                    android:onClick="openAddMoneyVisa"
+                    android:orientation="vertical">
+
+                    <ImageButton
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:backgroundTint="@color/background_home"
+                        android:gravity="center"
+                        android:onClick="openAddMoneyVisa"
+                        android:src="@drawable/visa" />
+
+                </LinearLayout>
+
+                <LinearLayout
+                    android:layout_width="150dp"
+                    android:layout_height="90dp"
+                    android:layout_marginLeft="0dp"
+                    android:layout_marginRight="0dp"
+                    android:layout_weight="0.3"
+                    android:background="@drawable/solid_shape_border"
+                    android:onClick="openAddMoneyVoucher"
+                    android:orientation="vertical">
+
+                    <ImageButton
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:backgroundTint="@color/background_home"
+                        android:gravity="center"
+                        android:onClick="openAddMoneyVoucher"
+                        android:src="@drawable/gift" />
+
+                </LinearLayout>
+
+            </LinearLayout>
+
+
+        </LinearLayout>
     </LinearLayout>
-</layout>
+
+</LinearLayout>
