--- a/app/src/main/res/layout/fragment_add_litters.xml
+++ b/app/src/main/res/layout/fragment_add_litters.xml
@@ -43,6 +43,7 @@
                     android:orientation="horizontal">
 
                     <TextView
+                        android:id="@+id/litter_title"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:fontFamily="@font/josefin_sans_semibold"
