--- a/app/src/main/res/navigation/farm_records_nav_graph.xml
+++ b/app/src/main/res/navigation/farm_records_nav_graph.xml
@@ -50,14 +50,14 @@
             android:id="@+id/action_livestockRecordsFragment_to_breedingStockViewFragment"
             app:destination="@id/breedingStockViewFragment" />
         <action
-            android:id="@+id/action_livestockRecordsFragment_to_matingViewFragment"
-            app:destination="@id/matingViewFragment" />
-        <action
             android:id="@+id/action_livestockRecordsFragment_to_littersViewFragment"
             app:destination="@id/littersViewFragment" />
         <action
             android:id="@+id/action_livestockRecordsFragment_to_medicationsViewFragment"
             app:destination="@id/medicationsViewFragment" />
+        <action
+            android:id="@+id/action_livestockRecordsFragment_to_matingsViewFragment"
+            app:destination="@id/matingsViewFragment" />
     </fragment>
     <fragment
         android:id="@+id/storeFragment"
@@ -265,15 +265,6 @@
             app:destination="@id/addBreedingStockFragment" />
     </fragment>
     <fragment
-        android:id="@+id/matingViewFragment"
-        android:name="com.myfarmnow.myfarmcrop.fragments.farmrecords.liveStockRecords.MatingViewFragment"
-        android:label="Matings"
-        tools:layout="@layout/fragment_mating_view" >
-        <action
-            android:id="@+id/action_matingViewFragment_to_addMatingsFragment"
-            app:destination="@id/addMatingsFragment" />
-    </fragment>
-    <fragment
         android:id="@+id/littersViewFragment"
         android:name="com.myfarmnow.myfarmcrop.fragments.farmrecords.liveStockRecords.LittersViewFragment"
         android:label="Litters"
@@ -319,12 +310,19 @@
             app:destination="@id/breedingStockViewFragment" />
     </dialog>
     <fragment
-        android:id="@+id/addMatingsFragment"
-        android:name="com.myfarmnow.myfarmcrop.DailogFragments.farmrecords.livestockrecords.AddMatingsFragment"
-        android:label="fragment_add_matings"
-        tools:layout="@layout/fragment_add_matings" >
+        android:id="@+id/matingsViewFragment"
+        android:name="com.myfarmnow.myfarmcrop.fragments.farmrecords.liveStockRecords.MatingsViewFragment"
+        android:label="Matings" >
         <action
-            android:id="@+id/action_addMatingsFragment_to_matingViewFragment"
-            app:destination="@id/matingViewFragment" />
+            android:id="@+id/action_matingsViewFragment_to_addMatingFragment"
+            app:destination="@id/addMatingFragment" />
     </fragment>
+    <dialog
+        android:id="@+id/addMatingFragment"
+        android:name="com.myfarmnow.myfarmcrop.DailogFragments.farmrecords.livestockrecords.AddMatingFragment"
+        android:label="Matings" >
+        <action
+            android:id="@+id/action_addMatingFragment_to_matingsViewFragment"
+            app:destination="@id/matingsViewFragment" />
+    </dialog>
 </navigation>
