--- a/app/src/main/res/layout/fragment_add_crop_notes.xml
+++ b/app/src/main/res/layout/fragment_add_crop_notes.xml
@@ -1,7 +1,7 @@
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    tools:context="com.myfarmnow.myfarmcrop.fragments.farmrecords.AddCropNotesFragment">
+    tools:context="com.myfarmnow.myfarmcrop.fragments.farmrecords.crop.AddCropNotesFragment">
 <LinearLayout
     android:layout_width="match_parent"
     android:layout_height="match_parent"
