--- a/app/src/main/res/layout/fragment_crop_activities_list.xml
+++ b/app/src/main/res/layout/fragment_crop_activities_list.xml
@@ -1,7 +1,7 @@
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    tools:context="com.myfarmnow.myfarmcrop.fragments.farmrecords.CropActivitiesListFragment">
+    tools:context="com.myfarmnow.myfarmcrop.fragments.farmrecords.crop.CropActivitiesListFragment">
 
 
     <androidx.coordinatorlayout.widget.CoordinatorLayout
