--- a/app/src/main/res/layout/fragment_fields_list.xml
+++ b/app/src/main/res/layout/fragment_fields_list.xml
@@ -2,7 +2,7 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    tools:context="com.myfarmnow.myfarmcrop.fragments.farmrecords.FieldsListFragment">
+    tools:context="com.myfarmnow.myfarmcrop.fragments.farmrecords.crop.FieldsListFragment">
 
 
     <androidx.coordinatorlayout.widget.CoordinatorLayout
