--- a/app/src/main/res/layout/fragment_gallery_view.xml
+++ b/app/src/main/res/layout/fragment_gallery_view.xml
@@ -2,7 +2,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.myfarmnow.myfarmcrop.fragments.farmrecords.gallery.GalleryViewFragment">
+    tools:context="com.myfarmnow.myfarmcrop.fragments.farmrecords.crop.GalleryViewFragment">
 
     <androidx.coordinatorlayout.widget.CoordinatorLayout
         xmlns:app="http://schemas.android.com/apk/res-auto"
