--- a/app/src/main/res/layout/fragment_add_photo_in_gallery.xml
+++ b/app/src/main/res/layout/fragment_add_photo_in_gallery.xml
@@ -2,7 +2,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    tools:context="com.myfarmnow.myfarmcrop.DailogFragments.farmrecords.gallery.AddPhotoInGalleryFragment">
+    tools:context="com.myfarmnow.myfarmcrop.DailogFragments.farmrecords.crop.AddPhotoInGalleryFragment">
 
     <androidx.cardview.widget.CardView
         xmlns:android="http://schemas.android.com/apk/res/android"
@@ -86,7 +86,7 @@
                             android:layout_marginBottom="@dimen/margin_10">
 
                             <EditText
-                                android:id="@+id/gallery_text"
+                                android:id="@+id/gallery_photo"
                                 android:layout_width="0dp"
                                 android:layout_height="50dp"
                                 android:layout_margin="0dp"
@@ -97,7 +97,7 @@
                                 android:textSize="14sp" />
 
                             <TextView
-                                android:id="@+id/add_animal_photo"
+                                android:id="@+id/add_gallery_photo"
                                 android:layout_width="wrap_content"
                                 android:layout_height="match_parent"
                                 android:layout_weight="0.1"
@@ -146,7 +146,7 @@
                             android:background="@drawable/rounded_corners_button">
 
                             <Button
-                                android:id="@+id/add_animal_submit"
+                                android:id="@+id/add_photo_submit"
                                 style="@style/Button"
                                 android:layout_width="match_parent"
                                 android:layout_height="55dp"
