implemented edit and delete in gallery

--- a/app/src/main/res/navigation/farm_records_nav_graph.xml
+++ b/app/src/main/res/navigation/farm_records_nav_graph.xml
@@ -344,5 +344,9 @@
         android:id="@+id/addPhotoInGalleryFragment"
         android:name="com.myfarmnow.myfarmcrop.DailogFragments.farmrecords.crop.AddPhotoInGalleryFragment"
         android:label="fragment_add_photo_in_gallery"
-        tools:layout="@layout/fragment_add_photo_in_gallery" />
+        tools:layout="@layout/fragment_add_photo_in_gallery" >
+        <action
+            android:id="@+id/action_addPhotoInGalleryFragment_to_galleryViewFragment"
+            app:destination="@id/galleryViewFragment" />
+    </dialog>
 </navigation>
