--- a/app/src/main/res/layout/fragment_add_photo_in_gallery.xml
+++ b/app/src/main/res/layout/fragment_add_photo_in_gallery.xml
@@ -2,6 +2,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    android:layout_margin="@dimen/dimen_30dp"
     tools:context="com.myfarmnow.myfarmcrop.DailogFragments.farmrecords.crop.AddPhotoInGalleryFragment">
 
     <androidx.cardview.widget.CardView
@@ -13,11 +14,11 @@
 
         <RelativeLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent">
+            android:layout_height="wrap_content">
 
             <ScrollView
                 android:layout_width="match_parent"
-                android:layout_height="match_parent">
+                android:layout_height="wrap_content">
 
                 <LinearLayout
                     android:layout_width="match_parent"
@@ -32,7 +33,7 @@
                         android:orientation="horizontal">
 
                         <ImageView
-                            android:id="@+id/add_animal_close"
+                            android:id="@+id/gallery_close"
                             android:layout_width="26.18dp"
                             android:layout_height="26.18dp"
                             android:layout_alignParentEnd="true"
@@ -48,7 +49,7 @@
                         android:orientation="horizontal">
 
                         <TextView
-                            android:id="@+id/breeder_form_title"
+                            android:id="@+id/gallery_form_title"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
                             android:fontFamily="@font/josefin_sans_semibold"
@@ -60,7 +61,28 @@
                             android:textStyle="bold" />
                     </LinearLayout>
 
+                    <LinearLayout
+                        android:id="@+id/gallery_layout"
+                        android:layout_width="match_parent"
+                        android:layout_height ="wrap_content"
+                        android:orientation="vertical"
+                        android:layout_marginBottom="15dp"
+                        android:visibility="gone">
+                        <TextView
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:text="@string/image_preview"
+                            android:layout_marginBottom="4dp" />
 
+                        <ImageView
+                            android:id="@+id/image_preview"
+                            android:layout_width="match_parent"
+                            android:layout_height="100dp"
+                            android:paddingStart="@dimen/dimen_10dp"
+                            android:background="@drawable/edittext_corner"
+                             android:scaleType="centerCrop"/>
+
+                    </LinearLayout>
 
                     <LinearLayout
                         android:layout_width="match_parent"
