--- a/app/src/main/res/layout/gallery_list_card.xml
+++ b/app/src/main/res/layout/gallery_list_card.xml
@@ -12,6 +12,15 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical">
+        <ImageView
+            android:id="@+id/gallery_item_more"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:backgroundTint="@color/black"
+            android:src="@drawable/ic_baseline_more_vert"
+            android:layout_gravity="end"
+            android:padding="@dimen/dimen_5dp"
+           />
 
         <ImageView
             android:id="@+id/card_view_image"
