Livestock Records Fix

--- a/app/src/main/res/navigation/farm_records_nav_graph.xml
+++ b/app/src/main/res/navigation/farm_records_nav_graph.xml
@@ -58,6 +58,9 @@
         <action
             android:id="@+id/action_livestockRecordsFragment_to_matingsViewFragment"
             app:destination="@id/matingsViewFragment" />
+        <action
+            android:id="@+id/action_livestockRecordsFragment_to_farmRecordsHomeFragment"
+            app:destination="@id/farmRecordsHomeFragment" />
     </fragment>
     <fragment
         android:id="@+id/storeFragment"
